@@ -11,6 +11,7 @@ wikicalendar-2.1.0 (not yet released) - compatible to Trac 0.11 - 1.0
  resolved issues
  * #9718: Resolve relative wiki paths in pattern for wiki pages too
  * #10991: WikiCalendarMacros.get_macro_description() doesn't work on Trac
+ * #10992: WikiCalendarMacro is not thread-safe
  * #10993: Day names header is garbled with `Accept-Language: ja`
  * fixed translation of macro descriptions
 
